# GeckoDemo

./: README.md  log.txt
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/src/main/cpp/: CMakeLists.txt  gecko_engine.h  gecko_napi.cpp  gecko_napi.h
entry/src/main/ets/pages/: Index.ets
